--- a/force-app/main/default/aura/ReferringClinicItem/ReferringClinicItem.cmp
+++ b/force-app/main/default/aura/ReferringClinicItem/ReferringClinicItem.cmp
@@ -2,8 +2,6 @@
 <aura:component description="ReferringClinicItem">
     <!--=============================================================================================================-->
     <aura:attribute name="clinicWrapper"                type="Object" required="true"/>
-    <aura:attribute name="userMode"                     type="String" description="HCP / PI / Participant"/>
-    <aura:attribute name="filterByStudy"                type="Boolean" default="false"/>
     <aura:attribute name="parent"                       type="Aura.Component"/>
     <aura:attribute name="ssId"                         type="String"/>
     <!--=============================================================================================================-->
@@ -28,23 +26,13 @@
             </div>
         </div>
 
-        <aura:if isTrue="{!v.filterByStudy}">
+        <aura:iteration items="{!v.enrollmentsByStudy}" var="item">
 
-            <aura:iteration items="{!v.enrollmentsByStudy}" var="item">
-
-                <div class="rci-study-name">{!item.studyName}</div>
-                <aura:iteration items="{!item.enrollments}" var="enrollment">
-                    <c:ReferringClinicEnrollmentItem enrollmentData="{!enrollment}" userMode="{!v.userMode}" parent="{!v.parent}"/>
-                </aura:iteration>
+            <div class="rci-study-name">{!item.studyName}</div>
+            <aura:iteration items="{!item.enrollments}" var="enrollment">
+                <c:ReferringClinicEnrollmentItem enrollmentData="{!enrollment}"  parent="{!v.parent}"/>
             </aura:iteration>
-
-            <aura:set attribute="else">
-                <aura:iteration items="{!v.clinicWrapper.enrollments}" var="item">
-                    <c:ReferringClinicEnrollmentItem enrollmentData="{!item}" userMode="{!v.userMode}" parent="{!v.parent}"/>
-                </aura:iteration>
-            </aura:set>
-        </aura:if>
-
+        </aura:iteration>
     </div>
 
 </aura:component>
