--- a/unpackaged/main/default/layouts/Participant_Enrollment_Status_History__c-Participant Enrollment Status History Layout.layout-meta.xml
+++ b/unpackaged/main/default/layouts/Participant_Enrollment_Status_History__c-Participant Enrollment Status History Layout.layout-meta.xml
@@ -13,11 +13,11 @@
             </layoutItems>
             <layoutItems>
                 <behavior>Edit</behavior>
-                <field>NewStatus__c</field>
+                <field>Date__c</field>
             </layoutItems>
             <layoutItems>
-                <behavior>Edit</behavior>
-                <field>Date__c</field>
+                <behavior>Required</behavior>
+                <field>Status__c</field>
             </layoutItems>
         </layoutColumns>
         <layoutColumns>
@@ -71,7 +71,7 @@
     <showRunAssignmentRulesCheckbox>false</showRunAssignmentRulesCheckbox>
     <showSubmitAndAttachButton>false</showSubmitAndAttachButton>
     <summaryLayout>
-        <masterLabel>00h0E000001IRAd</masterLabel>
+        <masterLabel>00h0E000001MWS0</masterLabel>
         <sizeX>4</sizeX>
         <sizeY>0</sizeY>
         <summaryLayoutStyle>Default</summaryLayoutStyle>
