--- a/force-app/main/default/aura/DashboardReferralsList/DashboardReferralsList.cmp
+++ b/force-app/main/default/aura/DashboardReferralsList/DashboardReferralsList.cmp
@@ -28,7 +28,7 @@
                     {!' ' + $Label.c.PG_DRL_L_referred_by_Dr + ' ' + item.data.Referral_Source__c}<br/>
                 </aura:set>
             </aura:if>
-            for <c:RRLink label="{!item.data.Study_Site__r.Clinical_Trial_Profile__r.Study_Code_Name__c}" page="{!'study-workspace?id=' + item.data.Study_Site__r.Clinical_Trial_Profile__c}"/>
+            {!$Label.c.PG_DBPI_L_for}&nbsp;<c:RRLink label="{!item.data.Study_Site__r.Clinical_Trial_Profile__r.Study_Code_Name__c}" page="{!'study-workspace?id=' + item.data.Study_Site__r.Clinical_Trial_Profile__c}"/>
             <aura:if isTrue="{!v.isAcceptence}">
                 <div class="rr-small-up-hide btn-block">
                     <button class="apollo-btn tertiary green"
