--- a/force-app/main/default/aura/StudySiteCardForPI/StudySiteCardForPI.cmp
+++ b/force-app/main/default/aura/StudySiteCardForPI/StudySiteCardForPI.cmp
@@ -81,15 +81,13 @@
                                     <div class="ss-info-address">{!if(v.siteWrapper.studySite.Site__r.BillingCity!=null, v.siteWrapper.studySite.Site__r.BillingCity + ', ', '') +v.siteWrapper.studySite.Site__r.BillingStateCode + ' ' + v.siteWrapper.studySite.Site__r.BillingPostalCode}</div>
                                     <c:RRIcon
                                             class="{!('Address' == v.siteWrapper.studySite.Site__r.BillingGeocodeAccuracy || 'NearAddress' == v.siteWrapper.studySite.Site__r.BillingGeocodeAccuracy) &amp;&amp; v.siteWrapper.studySite.Site__r.BillingLatitude &amp;&amp; v.siteWrapper.studySite.Site__r.BillingLongitude ? 'check-icon-style' : 'close-icon-style'}"
-                                            iconName="{!('Address' == v.siteWrapper.studySite.Site__r.BillingGeocodeAccuracy || 'NearAddress' == v.siteWrapper.studySite.Site__r.BillingGeocodeAccuracy || 'Block' == v.siteWrapper.studySite.Site__r.BillingGeocodeAccuracy || 'Street' == v.siteWrapper.studySite.Site__r.BillingGeocodeAccuracy || 'ExtendedZip' == v.siteWrapper.studySite.Site__r.BillingGeocodeAccuracy) &amp;&amp; v.siteWrapper.studySite.Site__r.BillingLatitude &amp;&amp; v.siteWrapper.studySite.Site__r.BillingLongitude ?'icon-check':'icon-close'}"/>
+                                            iconName="{!('Address' == v.siteWrapper.studySite.Site__r.BillingGeocodeAccuracy || 'NearAddress' == v.siteWrapper.studySite.Site__r.BillingGeocodeAccuracy) &amp;&amp; v.siteWrapper.studySite.Site__r.BillingLatitude &amp;&amp; v.siteWrapper.studySite.Site__r.BillingLongitude ? 'icon-check' : 'icon-close'}"/>
                                     <div style="display:inline-block;"
-                                         class="input-fields-labels">{!('Address' == v.siteWrapper.studySite.Site__r.BillingGeocodeAccuracy || 'NearAddress' == v.siteWrapper.studySite.Site__r.BillingGeocodeAccuracy || 'Block' == v.siteWrapper.studySite.Site__r.BillingGeocodeAccuracy || 'Street' == v.siteWrapper.studySite.Site__r.BillingGeocodeAccuracy || 'ExtendedZip' == v.siteWrapper.studySite.Site__r.BillingGeocodeAccuracy) &amp;&amp; v.siteWrapper.studySite.Site__r.BillingLatitude &amp;&amp; v.siteWrapper.studySite.Site__r.BillingLongitude ? $Label.c.SS_Address_Found : $Label.c.SS_Address_Not_Found}</div>
+                                         class="input-fields-labels">{!('Address' == v.siteWrapper.studySite.Site__r.BillingGeocodeAccuracy || 'NearAddress' == v.siteWrapper.studySite.Site__r.BillingGeocodeAccuracy) &amp;&amp; v.siteWrapper.studySite.Site__r.BillingLatitude &amp;&amp; v.siteWrapper.studySite.Site__r.BillingLongitude ? $Label.c.SS_Address_Found : $Label.c.SS_Address_Not_Found}</div>
                                 </div>
                                 <div class="slds-col slds-size_1-of-1 slds-medium-size_2-of-6 other-ss-info-container">
                                     <div class="ss-info-headers">{!$Label.c.SS_Driving_Instructions}</div>
-                                    <div 
-                                         class="driving-instructions">{!v.siteWrapper.studySite.Site__r.Driving_Directions__c}</div>
-                                    <div>{!v.siteWrapper.studySite.Site__r.Driving_Directions__c}</div>
+                                    <div class="driving-instructions">{!v.siteWrapper.studySite.Site__r.Driving_Directions__c}</div>
                                 </div>
                                 <div class="slds-col slds-size_1-of-1 slds-medium-size_2-of-6 other-ss-info-container">
                                     <div class="ss-info-headers">{!$Label.c.SS_Parking_Instructions}</div>
