--- a/force-app/main/default/aura/StudySiteCardForPI/StudySiteCardForPI.cmp
+++ b/force-app/main/default/aura/StudySiteCardForPI/StudySiteCardForPI.cmp
@@ -8,7 +8,6 @@
     <aura:attribute name="siteWrapper" type="Object"/>
     <aura:attribute name="rerenderComponent" type="Boolean" description="false"/>
     <aura:attribute name="userMode" type="String" description="HCP/PI/Patient"/>
-    <aura:attribute name="parent" type="Aura.Component"/>
     <aura:attribute name="studyListViewComponent" type="Aura.Component"/>
 
     <!-- component body: -->
@@ -87,11 +86,19 @@
                                 </div>
                                 <div class="slds-col slds-size_1-of-1 slds-medium-size_2-of-6 other-ss-info-container">
                                     <div class="ss-info-headers">{!$Label.c.SS_Driving_Instructions}</div>
-                                    <div class="driving-instructions">{!v.siteWrapper.studySite.Site__r.Driving_Directions__c}</div>
+                                    <div class="driving-instructions">
+                                        <c:uiLimitTextByLines maxLines="3" background="#f2f2f2">
+                                            {!v.siteWrapper.studySite.Site__r.Driving_Directions__c}
+                                        </c:uiLimitTextByLines>
+                                    </div>
                                 </div>
                                 <div class="slds-col slds-size_1-of-1 slds-medium-size_2-of-6 other-ss-info-container">
                                     <div class="ss-info-headers">{!$Label.c.SS_Parking_Instructions}</div>
-                                    <div class="driving-instructions">{!v.siteWrapper.studySite.Site__r.Parking_Instructions__c}</div>
+                                    <div class="driving-instructions">
+                                        <c:uiLimitTextByLines maxLines="3" background="#f2f2f2">
+                                            {!v.siteWrapper.studySite.Site__r.Parking_Instructions__c}
+                                        </c:uiLimitTextByLines>
+                                    </div>
                                 </div>
                             </div>
                             <div class="slds-col slds-size_1-of-1 slds-medium-size_3-of-3">
