--- a/force-app/main/default/aura/Action_ManageLocationDetails/Action_ManageLocationDetails.cmp
+++ b/force-app/main/default/aura/Action_ManageLocationDetails/Action_ManageLocationDetails.cmp
@@ -19,9 +19,7 @@
 
     <!-- component body -->
     <div class="mrc-invite-popup">
-        <c:Popup aura:id="manageLocation" title="{!$Label.c.SS_Manage_Location_Details}"
-                 size="large"
-                 showScroll="{!true}">
+        <c:Popup aura:id="manageLocation" title="{!$Label.c.SS_Manage_Location_Details}" size="large" showScroll="true">
             <div class="slds-grid slds-grid_vertical">
                 <div class="slds-grid slds-wrap">
                     <div class="slds-col slds-size--1-of-5 my-location-label">{!$Label.c.SS_My_Locations}</div>
@@ -83,7 +81,7 @@
             <aura:set attribute="footerButtons">
                 <c:RRSpinner aura:id="modalSpinner" size="medium" showSpinner="false"/>
                 <button class="apollo-btn secondary"
-                        onclick="{!c.closeModal}">{!$Label.c.BTN_Cancel}</button>
+                        onclick="{!c.doCancel}">{!$Label.c.BTN_Cancel}</button>
                 <button class="apollo-btn primary"
                         onclick="{!c.changeStudySiteAddress}"
                         disabled="{!!v.locationWasChanged}"
