--- a/force-app/main/default/aura/Action_ManageLocationDetails/Action_ManageLocationDetails.cmp
+++ b/force-app/main/default/aura/Action_ManageLocationDetails/Action_ManageLocationDetails.cmp
@@ -66,11 +66,19 @@
                                         </div>
                                         <div class="slds-col slds-size_4-of-12 manage-location-info">
                                             <div class="ss-info-headers">{!$Label.c.SS_Driving_Instructions}</div>
-                                            <div class="driving-instructions">{!account.Driving_Directions__c}</div>
+                                            <div class="driving-instructions">
+                                                <c:uiLimitTextByLines maxLines="3" background="#f2f2f2">
+                                                    {!account.Driving_Directions__c}
+                                                </c:uiLimitTextByLines>
+                                            </div>
                                         </div>
                                         <div class="slds-col slds-size_4-of-12 manage-location-info">
                                             <div class="ss-info-headers">{!$Label.c.SS_Parking_Instructions}</div>
-                                            <div class="driving-instructions">{!account.Parking_Instructions__c}</div>
+                                            <div class="driving-instructions">
+                                                <c:uiLimitTextByLines maxLines="3" background="#f2f2f2">
+                                                    {!account.Parking_Instructions__c}
+                                                </c:uiLimitTextByLines>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
