--- a/force-app/main/default/aura/RRPaginationRemote/RRPaginationRemote.cmp
+++ b/force-app/main/default/aura/RRPaginationRemote/RRPaginationRemote.cmp
@@ -10,7 +10,7 @@
 
     <aura:handler name="init" value="{!this}" action="{!c.doCalcTotalPages}"/>
     <aura:handler name="change" value="{!v.allRecordsCount}" action="{!c.doCalcTotalPages}"/>
-
+    <aura:handler name="change" value="{!v.entriesOnPage}" action="{!c.doCalcTotalPages}"/>
     <aura:if isTrue="{!v.totalPages > 0}">
         <div class="rrp-container">
             <div class="buttons">
